Backtick ( ` ) keyboard key not detected anywhere in blender #42426

Closed
opened 2014-10-28 15:18:16 +01:00 by Ray Mairlot · 18 comments

System Information
Windows 7 64-bit, nvidia gtx 570

Blender Version
Broken: 2.49b, official 2.72b, 6c2ce7a
Worked: unknown

Short description of error

The backtick key ` is unresponsive in blender. I tried to use it to toggle all layers in the 3D viewport and found that it didn't work. I then found I couldn't type it into the user preferences to try and find the keyboard shortcut for it, nothing happens when I press the key. I also can't enter it in to the blender text editor. I don't have a problem typing this key into other applications, as I typed it as part of this bug report.

The keyboard is a standard usb logitech keyboard, I have no hotkey software installed and I was testing with factory blender settings. I also tested a Windows 8.1 64-bit machine and also found the shortcut didn't work, so I don't think it's the keyboard.

I also tried with the windows on-screen accessibility keyboard and it also couldn't trigger the shortcut.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open blender
  2. Press ` while in the 3D viewport to toggle all layers on and off
  3. No toggling occurs
**System Information** Windows 7 64-bit, nvidia gtx 570 **Blender Version** Broken: 2.49b, official 2.72b, 6c2ce7a Worked: unknown **Short description of error** The backtick key ` is unresponsive in blender. I tried to use it to toggle all layers in the 3D viewport and found that it didn't work. I then found I couldn't type it into the user preferences to try and find the keyboard shortcut for it, nothing happens when I press the key. I also can't enter it in to the blender text editor. I don't have a problem typing this key into other applications, as I typed it as part of this bug report. The keyboard is a standard usb logitech keyboard, I have no hotkey software installed and I was testing with factory blender settings. I also tested a Windows 8.1 64-bit machine and also found the shortcut didn't work, so I don't think it's the keyboard. I also tried with the windows on-screen accessibility keyboard and it also couldn't trigger the shortcut. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open blender 2. Press ` while in the 3D viewport to toggle all layers on and off 3. No toggling occurs
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RayMairlot

Added subscriber: @RayMairlot

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Works okay here on Mac.

Works okay here on Mac.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Works on Linux (every system I ever used).

  • What keymap are you using? (try change it?)
  • Did you try if changing keyboards makes any difference?
  • Try another system to see if you can redo the error
Works on Linux (every system I ever used). - What keymap are you using? (try change it?) - Did you try if changing keyboards makes any difference? - Try another system to see if you can redo the error
Author

Ok, so I just found that if I press the apostrophe key ( ' on the same key as the @ symbol) I can toggle all the layers
(I'm using a standard UK qwerty keyboard). I was under the impression that it is the backtick key ( ` ) commonly found above the 'tab' key and to the left of the '1' key that should be toggling the layers.

Looking at the 'type' property of the keyconfig in python for 'view3d.layers' I can see it's set to 'ACCENT_GRAVE' which is another name for the backtick, not apostrophe.

If I then search the keybindings in the user preferences using the apostrophe, no keybindings come up. If I paste in a backtick (remembering I can't actually type one), the toggle layers keybinding appear (along with similar keybindings for 'Show all layers' for Armatures and Pose mode).

So the apostrophe is being used as the shortcut in practice, but appears to be a backtick when examining the keybinding either via the preferences or python.

I use apostrophe ( ' ) in the 3D view and it toggles layers.
I use apostrophe in preferences and no key bindings appear.
I use backtick ( ` ) in 3D view and layers don't toggle.
I use backtick in preferences and shortcut appears (showing the backtick in the keybinding)

Ok, so I just found that if I press the apostrophe key ( ' on the same key as the @ symbol) I can toggle all the layers (I'm using a standard UK qwerty keyboard). I was under the impression that it is the backtick key ( ` ) commonly found above the 'tab' key and to the left of the '1' key that should be toggling the layers. Looking at the 'type' property of the keyconfig in python for 'view3d.layers' I can see it's set to 'ACCENT_GRAVE' which is another name for the backtick, not apostrophe. If I then search the keybindings in the user preferences using the apostrophe, no keybindings come up. If I paste in a backtick (remembering I can't actually type one), the toggle layers keybinding appear (along with similar keybindings for 'Show all layers' for Armatures and Pose mode). So the apostrophe is being used as the shortcut in practice, but appears to be a backtick when examining the keybinding either via the preferences or python. I use apostrophe ( ' ) in the 3D view and it toggles layers. I use apostrophe in preferences and no key bindings appear. I use backtick ( ` ) in 3D view and layers don't toggle. I use backtick in preferences and shortcut appears (showing the backtick in the keybinding)

Added subscriber: @mont29

Added subscriber: @mont29

This is more than likely some specific weirdness on your system… Please follow Campbell's suggestions (try another keyboard, and on another system as well).

This is more than likely some specific weirdness on your system… Please follow Campbell's suggestions (try another keyboard, and on another system as well).
Author

As I said in my original report, I tried this on a separate windows 8.1 machine. I have since tested:

Windows 7: Has problem
Windows 8.1 Has problem
Windows XP: Has problem
Linux: no problem.

Linux worked completely as expected with the backtick key toggling layers. All of the window systems I have tried (all separate computers) have the problem. The linux test was done on a dual boot of the original windows 7 system, so I used the same keyboard for that.

As I said in my original report, I tried this on a separate windows 8.1 machine. I have since tested: Windows 7: Has problem Windows 8.1 Has problem Windows XP: Has problem Linux: no problem. Linux worked completely as expected with the backtick key toggling layers. All of the window systems I have tried (all separate computers) have the problem. The linux test was done on a dual boot of the original windows 7 system, so I used the same keyboard for that.

Hmmm… looks like some issue in our GHOST mapping for UK QWERTY layout…

Could you maybe try other layouts from the same family (like US one)?

Hmmm… looks like some issue in our GHOST mapping for UK QWERTY layout… Could you maybe try other layouts from the same family (like US one)?
Author

Yep, changed to US keyboard language and it worked.

Yep, changed to US keyboard language and it worked.
Martijn Berger was assigned by Bastien Montagne 2014-10-31 17:47:26 +01:00

OK thanks, think we know quite well the issue now, just have to find some dev on windows with UK keyboard… Martijn, by any chance? ;)

OK thanks, think we know quite well the issue now, just have to find some dev on windows with UK keyboard… Martijn, by any chance? ;)

This issue was referenced by dc199369d1

This issue was referenced by dc199369d12eec16c566bc31afde737fa77922d5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dc199369d1.

Closed by commit dc199369d1.

Added subscriber: @marcospereira

Added subscriber: @marcospereira

Just reproduced this issue on macOS Monterey 12.1. Cannot use backtick as shortcut for view options.

This happens when keyboard language is set to U.S. International. It does not happen when set to U.S., with the backtick working as expected then.

Cheers

Just reproduced this issue on macOS Monterey 12.1. Cannot use backtick as shortcut for view options. This happens when keyboard language is set to U.S. International. It does not happen when set to U.S., with the backtick working as expected then. Cheers
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42426
No description provided.